# F1tenth-sim-on-Gazebo-with-TB3

./: README.md
turtlebot3_race/: package.xml  setup.cfg  setup.py
turtlebot3_race/launch/: racetrack_launch.py
turtlebot3_race/models/turtlebot3_waffle/: model-1_4.sdf  model.sdf  turtlebot3_waffle.gazebo.xacro
turtlebot3_race/resource/: Turtlebot_YOLOV8.ipynb
turtlebot3_race/turtlebot3_race/: PID_Controller.py  yolo_node.py
turtlebot3_race/worlds/: hexagonal_track.world  output.urdf
turtlebot3_race/worlds/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
